# spiro-ML-playground

./: .gitignore  Dataset.py  ITK.ipynb  ModelLoader.py  Playground.ipynb  build_dataset.sh  convnet.py  myshow.py  read.py  run.sh  train.py
ImageTools/: CMakeLists.txt  DICOMGrid.cpp  ImageAugment.cpp  ImageDownsample.cpp  ImageMultiRes.cpp  LungSegment.cpp  augment.py  augmenter_runner.py  config.json.dist  convert.py  converter_runner.py  dicom_to_numpy.py  main.cpp  numpyify.py  preview.py  run.sh  segment.py  testset.py  trimmer_runner.py
ImageTools/APPIL_DNN/: basic_cli.py  basic_stdout.py  cli.py  config.py  data.py  data_helper.py  image_helper.py  image_path_helper.py  image_stat.py  net_calc.py  path_helper.py  process_runner.py  running_stat.py
dataset-settings/: config.10.nosegment.json  config.10.segment.json  config.4.nosegment.json  config.4.segment.json  config.6.nosegment.json  config.6.segment.json  config.6.segment_noaug.json  config.dummy.noseg.json  config.dummy.seg.json  config.json  config.small_ds.json
models/: model_1.json  model_2.json
models/model_2/: config.json
models/model_3/: config.json
models/model_5/: config.json
models/model_6/: config.json
models/new_raw_10/: config.json
models/new_seg_6/: config.json
models/new_seg_6_noaug/: config.json
models/new_seg_6_vgg/: config.json
